# xrt

./: pyproject.toml
omf_test/: 01_xmf_convex_hyperbolic_cylinder_test_in_xrt.py  02_xmf_concave_hyperbolic_cylinder_test_in_xrt.py  03_xmf_convex_hyperboloid_test_in_xrt.py  04_xmf_concave_hyperboloid_test_in_xrt.py  05_xmf_convex_elliptic_cylinder_test_in_xrt.py  06_xmf_concave_elliptic_cylinder_test_in_xrt.py  07_xmf_convex_ellipsoid_test_in_xrt.py  08_xmf_concave_ellipsoid_test_in_xrt.py  09_xmf_sag_col_diaboloid_test_in_xrt.py  10_xmf_tan_col_diaboloid_test_in_xrt.py  11_xmf_p1l2_diaboloid_test_in_xrt.py  11j_xmf_p1l2_diaboloid_test_in_xrt.py  xmf_check_standard_shape.py  xmf_ell_standard_shape_test_in_xrt.py  xmf_ell_standard_shape_test_in_xrt_in_mirror_cooridnates.py  xmf_hyp_standard_shape_test_in_xrt.py  xmf_standard_shape.py  xmf_standard_shape.xml  xmf_standard_shape_test_in_xrt.py  xrtCodeForLei.py  xrtCodeforLei2.py.txt  xrtQook_generated.py  xrtQook_generated.xml  xrtQook_generated_py  xrtQook_generated_rc_local_py  xrtQook_generated_rc_py
omf_test/AKB-based Full-field XRF Microscope/: 2d-scan_fwhm_data.json  Full-field XRF Microscope (MxN-source, Mag=15, 90-mm-wd, VAKB-III + HAKB-I).py  Full-field XRF Microscope (MxN-source, Mag=46, 70-mm-wd, AKB-III).py  Mag=110 AKB-I Geometry Config.json  Mag=110 AKB-III Geometry Config.json  Mag=15 AKB-I Geometry Config.json  Mag=18 AKB-I Geometry Config.json  Mag=18 AKB-III Geometry Config.json  Mag=46 both AKB-III Geometry Config.json  Mag=96 AKB-I Geometry Config.json  fwhm_data.json  (+14 more)
xrt/: lastRuns.pickle  runner.py
(+81 files in other folders)
