[project]
name = "xrt"
version = "1.6.1"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scipy (>=0.17)",
    "numpy (>=1.8)",
    "requests (>=2.32.5,<3.0.0)",
    "pyqt5 (>=5.15.11,<6.0.0)",
    "pyqtwebengine (>=5.15.7,<6.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
matplotlib = ">=2.0.0"
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
