[project]
name = "xrt"
version = "1.16.1"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=1.8.0)",
    "scipy (>=0.17)",
    "matplotlib (>=2.0.0)",
    "distro (>=1.9.0,<2.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "pyopengl (>=3.1.10,<4.0.0)",
    "sympy (>=1.14.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
